--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,22 @@
 #manually ignoring build dirs,
 #feel free to make this better with a regex
 
+tmp
+*#
 *~
 build/
 html/
 .zanata-cache/
+.sw*
+.*.sw*
 .DS_Store
 */.DS_Store
+.html
+# Pycharm stuff
+.idea
+# VSCode stuff
+.vscode
+.vscode/
 *.zip
 emender/results/*
 downstream/titles/*/master.html
@@ -16,3 +26,6 @@ downstream/titles/*/*/master.html
 release-notes/master.html
 *.docx
 *.swp
+*.bak
+# virtual environments
+venv
