--- a/downstream/modules/platform/ini/clustered-nodes.ini
+++ b/downstream/modules/platform/ini/clustered-nodes.ini
@@ -1,4 +1,4 @@
-[controller]
+[automationcontroller]
 clusternode1.example.com
 clusternode2.example.com
 clusternode3.example.com
@@ -6,8 +6,7 @@ clusternode3.example.com
 [all:vars]
 admin_password='password'
 
-pg_host=''
-pg_port=''
+pg_host='<host_name>'
 
 pg_database='<database_name>'
 pg_username='<your_username>'
